# ece6745-scripts

./: .gitignore  Makefile.in  README  aclocal.m4  configure  configure.ac
etc/: ece2300-git-config  ece4750-git-config  ece5745-git-config  ece6745-git-config
share/tinyflow-batch-drc/: batch-drc.rb  geometry-check.rb
share/tinyflow-batch-lvs/: batch-cell-lvs.lylvs  batch-lvs.rb
share/tinyflow-ngspice/: tinyflow-ngspice-tb-tmpl.sp
